# rustmeter

./: .gitignore  Cargo.toml  LICENCE  README.md
.github/workflows/: ci.yml
examples/esp32-multicore/: Cargo.toml
examples/esp32-multicore/src/: main.rs
examples/rp2040/: Cargo.toml
examples/rp2040/src/: main.rs
examples/stm32-multiprio/: Cargo.toml  Embed.toml
examples/stm32-multiprio/.cargo/: config.toml
examples/stm32-multiprio/src/: main.rs
rustmeter-beacon/: Cargo.toml  README.md
rustmeter-beacon/function-monitor/: Cargo.toml
rustmeter-beacon/function-monitor/src/: lib.rs
rustmeter-beacon/rustmeter-beacon-core/: Cargo.toml
rustmeter-beacon/rustmeter-beacon-core/src/: buffer.rs  lib.rs  monitor_scoped.rs  protocol.rs  time_delta.rs  tracing.rs
rustmeter-beacon/rustmeter-beacon-core/src/protocol/: event_payload.rs  mod.rs  monitor_value_payload.rs  typedef_payload.rs
rustmeter-beacon/rustmeter-beacon-function-monitor/: Cargo.toml
rustmeter-beacon/rustmeter-beacon-proc-macros/: Cargo.toml
rustmeter-beacon/rustmeter-beacon-proc-macros/src/: lib.rs
rustmeter-beacon/rustmeter-beacon-target/: Cargo.toml
rustmeter-beacon/rustmeter-beacon-target/src/: core_id.rs  embassy_trace.rs  executor_registry.rs  lib.rs  monitors.rs  numeric_registry.rs  tracing_rtt.rs
rustmeter-beacon/rustmeter-beacon-target/src/espressif/: esp_defmt_pipe.rs  espressif_config.rs  mod.rs  printing.rs  tracing_esp.rs
rustmeter-beacon/src/: embassy.rs  lib.rs
rustmeter-beacon/tracing-core/: Cargo.toml
rustmeter-beacon/tracing-core/src/: core_id.rs
rustmeter-cli/: Cargo.toml  README.md
rustmeter-cli/src/: cli.rs  elf_file.rs  flash_and_monitor.rs  main.rs  time.rs
rustmeter-cli/src/cargo/: cargo_build.rs  cargo_child.rs  mod.rs
rustmeter-cli/src/espflash/: flashing.rs  mod.rs  serial_listener.rs
rustmeter-cli/src/logs/: defmt_decoding.rs  defmt_line.rs  defmt_log_level.rs  mod.rs
rustmeter-cli/src/perfetto_backend/: file_writer.rs  mod.rs  trace_event.rs
rustmeter-cli/src/probe_rs/: atomic_session.rs  flash_progress.rs  flashing.rs  mod.rs  rtt_listener.rs
rustmeter-cli/src/tracing/: core.rs  executor.rs  log_event.rs  log_line.rs  mod.rs  task.rs  trace_data_decoder.rs  tracing_instance.rs
