[package]
name = "rustmeter-beacon"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Christopher Kock"]
description = "Lightweight tracing library for embedded Rust applications, integrated with embassy and defmt."
repository = "https://github.com/Christopher-06/rustmeter"
keywords = ["embedded", "tracing", "profiling", "no-std", "embassy"]
categories = ["embedded", "development-tools::profiling", "no-std"]
exclude = ["/debug", "/target", ".gitignore"]

[dependencies]
rustmeter-beacon-function-monitor = { path = "rustmeter-beacon-function-monitor", version = "0.1.0" }
rustmeter-beacon-core = { path = "rustmeter-beacon-core", version = "0.1.0" }
embassy-executor = { version = "0.9", features = ["defmt", "trace"] }
defmt = { version = "1" }

[features]
