[package]
name = "rustmeter"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Christopher Kock"]
description = "RustMeter CLI application to interact with RustMeter beacons and export Perfetto traces."
repository = "https://github.com/Christopher-06/rustmeter"
keywords = ["embedded", "profiling", "tracing", "cli", "perfetto"]
categories = ["embedded", "development-tools::profiling", "command-line-utilities"]
exclude = ["/debug", "/target", ".gitignore"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
object = "0.38"
rustc-demangle = "0.1"
color-print = "0.3.7"
ctrlc = "3.5.1"
