[package]
edition = "2024"
name = "rustmeter-rp2040-example"
version = "0.1.0"
license = "MIT OR Apache-2.0"

publish = false

[dependencies]
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "trace"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.9.0",  features = ["unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
defmt = "1.0.1"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

static_cell = "2.1"
portable-atomic = { version = "1.5.0", features = ["critical-section"] }
rustmeter-beacon = {path = "../../rustmeter-beacon", features = ["rp2040", "defmt"]} 

[patch.crates-io] # Currently needed to enable "trace" feature in embassy crates
embassy-time = { path = "../../../embassy/embassy-time" }
embassy-executor = { path = "../../../embassy/embassy-executor" }
embassy-rp = { path = "../../../embassy/embassy-rp" }

[profile.release]
codegen-units = 1
debug = true            
debug-assertions = false
opt-level = 3          
lto = "fat"

[package.metadata.embassy]
build = [
  { target = "thumbv6m-none-eabi", artifact-dir = "out/examples/rp" }
]
