[package]
name = "rustmeter-beacon-core"
version = "0.1.0"
edition = "2024"
exclude = ["/debug", "/target", ".gitignore"]
license = "MIT"
authors = ["Christopher Kock"]
description = "Core library for rustmeter-beacon"
repository = "https://github.com/Christopher-06/rustmeter"

[dependencies]
portable-atomic = "1"
arbitrary-int = "2"
critical-section = "1"

[features]
std = ["portable-atomic/std", "critical-section/std"]