[package]
name = "rustmeter-beacon-target"
version = "0.1.0"
edition = "2024"
exclude = ["/debug", "/target", ".gitignore"]
license = "MIT"
authors = ["Christopher Kock"]
description = "Target side library for rustmeter-beacon"
repository = "https://github.com/Christopher-06/rustmeter"

[dependencies]
rtt-target = { version = "0.6.2" }
defmt = { version = "1", optional = true }
rustmeter-beacon-core = { path = "../rustmeter-beacon-core" }
portable-atomic = "1"
arbitrary-int = "2"
embassy-time = { version = "0.5" }

esp-hal = { version = "1", optional = true}
embassy-rp = { version = "0.9", optional = true}

[features]
defmt = ["dep:defmt", "rtt-target/defmt"]
stm32 = []
esp32 = ["dep:esp-hal", "esp-hal/esp32"]
esp32c2 = ["dep:esp-hal", "esp-hal/esp32c2"]
esp32c3 = ["dep:esp-hal", "esp-hal/esp32c3"]
esp32c6 = ["dep:esp-hal", "esp-hal/esp32c6"]
esp32h2 = ["dep:esp-hal", "esp-hal/esp32h2"]
esp32s2 = ["dep:esp-hal", "esp-hal/esp32s2"]
esp32s3 = ["dep:esp-hal", "esp-hal/esp32s3"]
rp2040 = ["dep:embassy-rp", "embassy-rp/rp2040"]
rp235xa = ["dep:embassy-rp", "embassy-rp/rp235xa"]
rp235xb = ["dep:embassy-rp", "embassy-rp/rp235xb"]
